--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wno-unused-function -std=c++0x -Wno-narrowing -Wno-unused-function -std=c++0x")
 set (CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -Wno-unused-function -std=c++0x -Wno-narrowing -Wno-unused-function -std=c++0x")
 set (CMAKE_POSITION_INDEPENDENT_CODE ON)
-set (CMAKE_SHARED_LINKER_FLAGS "-lc -lgcc_s -lgcc -static-libstdc++ -static-libgcc -Wl,--wrap=memcpy") #-static-libgcc
+set (CMAKE_SHARED_LINKER_FLAGS "-lc -lgcc_s -lgcc -static-libstdc++ -static-libgcc -Wl,--wrap=memcpy")
 
 include_directories (
     ${${MODEL_NAME}_SOURCE_DIR}/packages/OSPSuite.CPP-Toolbox.${OS_NAME}/OSPSuite.CPP-Toolbox/include
@@ -18,7 +18,3 @@ file (GLOB SOURCES
 
 add_library (${MODEL_NAME} SHARED ${SOURCES})
 
-target_link_libraries (${MODEL_NAME} 
-	dl rt m pthread
-	c gcc_s gcc 
-)
